// Habit Tracking App with Social Features
// Auth: Discord OAuth only
// Docs: https://dbml.dbdiagram.io/docs
//
// Conventions:
// - All FKs are ON DELETE CASCADE unless noted otherwise (see migrations/001_init.sql)
// - All status/type strings are enforced via CHECK constraints in SQL (see migrations)
// - Hard deletes only — no soft delete columns anywhere
// - All timestamps are stored in UTC; user-local conversion happens at query time
//   using users.timezone
//
// AUTH NOTE — fields and tables marked "[auth-required]" exist solely to satisfy
// NextAuth's @auth/prisma-adapter. They are the only deviation from this design's
// "design docs are canonical" rule. See NOTES.md §16.

Table users {
  id GUID [primary key]
  discord_id varchar [unique, not null, note: 'auth only, never displayed; set by Discord OAuth']
  username varchar [unique, note: 'NULL until user completes /create-account; chosen by user, not derived from Discord']
  bio text
  avatar_url varchar [note: 'mapped from NextAuth `image`; populated from Discord on first login, user-editable later']
  timezone varchar [not null, default: 'UTC', note: 'IANA tz, e.g. America/Los_Angeles']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`, note: 'auto-managed by Prisma `@updatedAt`']

  // [auth-required] NextAuth shell fields — populated by adapter on OAuth round-trip.
  name varchar [note: 'auth-required; from Discord profile']
  email varchar [unique, note: 'auth-required; from Discord profile']
  email_verified timestamp [note: 'auth-required; unused for Discord OAuth']

  indexes {
    discord_id
    username
  }
}

// ============================================
// AUTH (NextAuth / @auth/prisma-adapter required)
// These tables exist only because the Prisma adapter needs them. We use the
// default database session strategy. Cascading from users is required so a
// hard-delete of a user wipes their auth artifacts too.
// ============================================

Table accounts {
  id varchar [primary key, note: 'auth-required; cuid']
  user_id GUID [ref: > users.id, not null]
  type varchar [not null]
  provider varchar [not null]
  provider_account_id varchar [not null, note: 'OAuth subject — for Discord, equals users.discord_id']
  refresh_token varchar
  access_token varchar
  expires_at int
  token_type varchar
  scope varchar
  id_token varchar
  session_state varchar
  refresh_token_expires_in int

  indexes {
    (provider, provider_account_id) [unique]
  }
}

Table sessions {
  id varchar [primary key, note: 'auth-required; cuid']
  session_token varchar [unique, not null]
  user_id GUID [ref: > users.id, not null]
  expires timestamp [not null]
}

Table verification_tokens {
  identifier varchar [not null]
  token varchar [unique, not null]
  expires timestamp [not null]

  indexes {
    (identifier, token) [unique]
  }
}

// ============================================
// HABITS
// ============================================

Table habits {
  id GUID [primary key]
  user_id GUID [ref: > users.id, not null]
  name varchar [not null]
  description text
  icon varchar
  color varchar
  
  frequency_type varchar [not null, note: 'daily, weekly, n_per_period']
  target_count int [default: 1, note: 'times per day/week, or N for n_per_period']
  period_days int [note: 'only used for n_per_period']
  
  // Challenge fields (null for non-challenge habits)
  start_date date
  end_date date
  required_completions int [note: 'null = use frequency rules to determine success']
  status varchar [default: 'active', note: 'active, succeeded, failed, abandoned']
  
  is_public boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp
  
  indexes {
    user_id
    (user_id, status)
  }
}

Table habit_schedules {
  id GUID [primary key]
  habit_id GUID [ref: > habits.id, not null]
  day_of_week int [note: '0=Sunday, 6=Saturday']
  reminder_time time
  reminder_enabled boolean [default: true]
  
  indexes {
    habit_id
  }
}

Table habit_logs {
  id GUID [primary key]
  habit_id GUID [ref: > habits.id, not null]
  user_id GUID [ref: > users.id, not null]
  completed_at timestamp [not null]
  notes text

  // Optional R2-hosted attachment. `media_url` is the public URL; the
  // object key is derived from it for cleanup. See NOTES.md §17 for size +
  // duration limits and the cleanup contract.
  media_url varchar [note: 'public R2 URL; null when log is text-only']
  media_type varchar [note: 'photo, video — see media_type enum']
  media_duration_ms int [note: 'video only; capped at 15000 by CHECK']

  created_at timestamp [default: `now()`]

  indexes {
    habit_id
    user_id
    (user_id, completed_at)
    (habit_id, completed_at)
  }
}

// ============================================
// SOCIAL
// ============================================

Table follows {
  follower_id GUID [ref: > users.id]
  following_id GUID [ref: > users.id]
  created_at timestamp [default: `now()`]
  
  indexes {
    (follower_id, following_id) [pk]
    following_id
  }
}

Table blocks {
  blocker_id GUID [ref: > users.id]
  blocked_id GUID [ref: > users.id]
  created_at timestamp [default: `now()`]
  
  indexes {
    (blocker_id, blocked_id) [pk]
    blocked_id
  }
}

Table reports {
  id GUID [primary key]
  reporter_id GUID [ref: > users.id, not null]
  target_type varchar [not null, note: 'user, comment, habit_log']
  target_id GUID [not null, note: 'polymorphic — no FK; cleanup job required']
  reason varchar [not null]
  status varchar [default: 'pending', note: 'pending, reviewed, dismissed']
  created_at timestamp [default: `now()`]
  
  indexes {
    (target_type, target_id)
    status
  }
}

Table likes {
  user_id GUID [ref: > users.id]
  habit_log_id GUID [ref: > habit_logs.id]
  created_at timestamp [default: `now()`]
  
  indexes {
    (user_id, habit_log_id) [pk]
    habit_log_id
  }
}

Table comments {
  id GUID [primary key]
  user_id GUID [ref: > users.id, not null]
  habit_log_id GUID [ref: > habit_logs.id, not null]
  content text [not null, note: '@mentions are plain text, parsed at render time']
  created_at timestamp [default: `now()`]
  
  indexes {
    habit_log_id
    user_id
  }
}

// ============================================
// NOTIFICATIONS
// ============================================

Table notifications {
  id GUID [primary key]
  user_id GUID [ref: > users.id, not null, note: 'recipient']
  actor_id GUID [ref: > users.id, note: 'who triggered it']
  type varchar [note: 'follow, like, comment']
  habit_log_id GUID [ref: > habit_logs.id]
  comment_id GUID [ref: > comments.id]
  is_read boolean [default: false]
  created_at timestamp [default: `now()`]
  
  indexes {
    (user_id, is_read)
    (user_id, created_at)
  }
}

Table device_tokens {
  user_id GUID [ref: > users.id, not null]
  token varchar [primary key]
  platform varchar [note: 'ios, android, web']
  created_at timestamp [default: `now()`]
  last_used_at timestamp
  
  indexes {
    user_id
  }
}
